Clean up WireMockApp